--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,6 +74,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.dinfogarneau.cours03e.ecotrajet.ConducteurActivity" />
         </activity>
+        <activity
+            android:name=".ajout_trajet"
+            android:label="@string/title_activity_ajout_trajet"
+            android:parentActivityName=".ConducteurActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.dinfogarneau.cours03e.ecotrajet.ConducteurActivity" />
+        </activity>
     </application>
 
 </manifest>
